--- a/sequence/site.conf
+++ b/sequence/site.conf
@@ -10,6 +10,8 @@ server {
 	listen [::]:8443 ssl http2;
 	include /etc/nginx/sites-available/shared-ssl.inc;
 
+	http2_push_preload on;
+
 	client_header_timeout 5s;
 	client_body_timeout 5s;
 	client_max_body_size 1;
