Disable unprivileged user namespaces (https://ubuntu.com/security/CVE-2022-0185)

--- a/config/50-hardening.conf
+++ b/config/50-hardening.conf
@@ -38,6 +38,9 @@ net.ipv6.conf.default.accept_redirects = 0
 # disable "magic sysrq key" entirely since we do not need it
 kernel.sysrq = 0
 
+# disable unprivileged user namespaces
+kernel.unprivileged_userns_clone = 0
+
 # Thanks,
 # https://www.cyberciti.biz/faq/linux-kernel-etcsysctl-conf-security-hardening/
 # https://linoxide.com/how-tos/linux-sysctl-tuning/
