--- a/sequence/site.conf
+++ b/sequence/site.conf
@@ -10,6 +10,10 @@ server {
 	listen [::]:8443 ssl http2;
 	include /etc/nginx/sites-available/shared-ssl.inc;
 
+	if ($block) { # set in badagents.conf
+		return 444;
+	}
+
 	http2_push_preload on;
 
 	client_header_timeout 5s;
