Catch more vulnerability scans early and terminate the connection

--- a/refacto/site.conf
+++ b/refacto/site.conf
@@ -95,6 +95,10 @@ server {
 	client_body_timeout 5s;
 	client_max_body_size 1;
 
+	if ($request_method !~ ^(HEAD|GET)$) {
+		return 444;
+	}
+
 	location / {
 		access_log off;
 		expires max;
