--- a/www/site.conf
+++ b/www/site.conf
@@ -9,8 +9,11 @@ server {
 		return 444;
 	}
 
-	location ~ /(?:\.[^w]|_|wp-|php$)|^/(?:backup|b[ck]|home|main|new|old|wordpress|wp|debug|admin)(?:[/?]|$)|\.(?:php\d?|ini)(?:\?|$)|golem\.com {
-		# ignore bulk of drive-by hack attempts
+	if ($request_method !~ ^(HEAD|GET)$) {
+		return 444;
+	}
+
+	location ~ /(?:\.[^w]|_|wp-|php$)|^/(?:backup|b[ck]|home|main|new|old|wordpress|wp|debug|admin|about|server-status|telescope|path_sql|config\.json|ecp)(?:[/?]|$)|\.(?:php\d?|ini|action)(?:\?|$)|golem\.com|rest_route {
 		return 444;
 	}
 
@@ -19,8 +22,14 @@ server {
 	client_header_timeout 5s;
 	client_body_timeout 5s;
 	client_max_body_size 1;
+	absolute_redirect off; # nginx thinks it is on port 8443, so absolute redirects won't work
 
 	gzip_static on;
+
+	location ~ \.gz$ {
+		# prevent direct access to static gzip files
+		return 404;
+	}
 
 	add_header Content-Security-Policy "base-uri 'self'; default-src 'none'; img-src 'self'; style-src 'self'; form-action 'none'; frame-ancestors 'none'" always;
 	add_header Cross-Origin-Embedder-Policy "require-corp" always;
@@ -36,7 +45,7 @@ server {
 	add_header X-Clacks-Overhead "GNU Terry Pratchett" always;
 
 	location /security.txt { # old standardised location for security.txt
-		absolute_redirect off;
+		expires max;
 		return 301 /.well-known/security.txt;
 	}
 
