--- a/proxy/config/http.conf
+++ b/proxy/config/http.conf
@@ -11,6 +11,10 @@ server {
 	client_body_timeout 5s;
 	client_max_body_size 1;
 
+	if ($request_method !~ ^(HEAD|GET)$) {
+		return 444;
+	}
+
 	location / {
 		access_log off;
 		expires max;
