--- a/sequence/site.conf
+++ b/sequence/site.conf
@@ -14,6 +14,10 @@ server {
 		return 444;
 	}
 
+	if ($request_method !~ ^(HEAD|GET)$) {
+		return 444;
+	}
+
 	client_header_timeout 5s;
 	client_body_timeout 5s;
 	client_max_body_size 1;
