Add rate limiting to refacto password URL, improve & deduplicate proxy config, fix error_log off config

--- a/sequence/site.conf
+++ b/sequence/site.conf
@@ -19,17 +19,18 @@ server {
 	}
 
 	access_log off;
-	error_log off;
+	error_log /var/log/nginx/error.log crit;
 
 	merge_slashes off;
 
 	location / {
 		proxy_pass http://sequence_backend;
-		proxy_http_version 1.1;
+		include /etc/nginx/sites-available/proxy-common.inc;
 		proxy_set_header Connection "";
-		proxy_redirect off;
-		proxy_buffering off;
-		proxy_connect_timeout 5s;
+		proxy_request_buffering on;
+		proxy_buffering on;
+		proxy_pass_request_body off;
+		proxy_send_timeout 10s;
 		proxy_read_timeout 10s;
 	}
 }
