--- a/sequence/site.conf
+++ b/sequence/site.conf
@@ -19,7 +19,7 @@ server {
 	}
 
 	access_log off;
-	error_log /var/log/nginx/error.log crit;
+	error_log /var/log/nginx/error.log error;
 
 	merge_slashes off;
 
