--- a/sequence/site.conf
+++ b/sequence/site.conf
@@ -6,8 +6,9 @@ upstream sequence_backend {
 
 server {
 	server_name sequence.((DOMAIN));
-	listen 8443 ssl http2;
-	listen [::]:8443 ssl http2;
+	listen 8443 ssl;
+	listen [::]:8443 ssl;
+	http2 on;
 	include /etc/nginx/sites-available/shared-ssl.inc;
 
 	if ($block) { # set in badagents.conf
