--- a/sequence/sequence-updater.service
+++ b/sequence/sequence-updater.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Sequence Diagram Updater
+After=network.target
 
 [Service]
 Type=oneshot
 ExecStart=/var/www/sequence/update.sh
-After=network-online.target
