--- a/sequence/site.conf
+++ b/sequence/site.conf
@@ -1,6 +1,6 @@
 upstream sequence_backend {
-	server 127.0.0.1:8080 max_conns=64;
-	server 127.0.0.1:8081 max_conns=64;
+	server 127.0.0.1:8080 max_conns=64 fail_timeout=0 max_fails=0;
+	server 127.0.0.1:8081 max_conns=64 fail_timeout=0 max_fails=0;
 	keepalive 16;
 }
 
@@ -25,6 +25,8 @@ server {
 	merge_slashes off;
 
 	location / {
+		limit_req zone=background burst=5000;
+
 		proxy_pass http://sequence_backend;
 		include /etc/nginx/sites-available/proxy-common.inc;
 		proxy_set_header Connection "";
